--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,35 @@
 asgiref==3.7.2
+CacheControl==0.13.1
+cachetools==5.3.2
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
 cloudinary==1.38.0
+cryptography==42.0.1
 Django==4.2
 django-ckeditor==6.7.0
+django-cloudinary-storage==0.3.0
 django-js-asset==2.2.0
+google-api-python-client==2.115.0
+grpcio==1.60.0
+grpcio-status==1.60.0
+httplib2==0.22.0
 idna==3.6
+msgpack==1.0.7
 pillow==10.2.0
+proto-plus==1.23.0
+protobuf==4.25.2
+psycopg2-binary==2.9.9
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+PyJWT==2.8.0
+pyparsing==3.1.1
 python-decouple==3.8
 requests==2.31.0
+rsa==4.9
 six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.4
+uritemplate==4.1.1
 urllib3==2.1.0
