--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,6 @@ Django==4.2
 django-ckeditor==6.7.0
 django-cloudinary-storage==0.3.0
 django-js-asset==2.2.0
-google-api-python-client==2.115.0
-grpcio==1.60.0
-grpcio-status==1.60.0
 gunicorn==21.2.0
 httplib2==0.22.0
 idna==3.6
@@ -28,6 +25,7 @@ pycparser==2.21
 PyJWT==2.8.0
 pyparsing==3.1.1
 python-decouple==3.8
+pytz==2023.4
 requests==2.31.0
 rsa==4.9
 six==1.16.0
