--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.7.1
 asgiref==3.7.2
 CacheControl==0.13.1
 cachetools==5.3.2
@@ -29,8 +30,11 @@ pytz==2023.4
 requests==2.31.0
 rsa==4.9
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.4.4
 tzdata==2023.4
 uritemplate==4.1.1
 urllib3==2.1.0
+watchdog==4.0.1
+watchgod==0.8.2
 whitenoise==6.6.0
