--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,24 @@
 {
-    "builds": [{
-        "src": "project/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
+    "version": 2,
+    "builds": [
+        {
+            "src": "project/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        },
+        {
+            "src": "build.sh",
+            "use": "@vercel/static-build",
+            "config": { "distDir": "static_assets" }
+        }
+    ],
     
     "routes": [
+        {
+            "src": "/static_assets/(.*)",
+            "dest": "static_assets/$1"
+        },
+
         {
             "src": "/(.*)",
             "dest": "project/wsgi.py"
