--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Django==4.2
 django-ckeditor==6.7.0
 django-cloudinary-storage==0.3.0
 django-js-asset==2.2.0
+djangorestframework==3.15.2
 gunicorn==21.2.0
 httplib2==0.22.0
 idna==3.6
