--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 anyio==3.7.1
 asgiref==3.8.1
 CacheControl==0.13.1
@@ -13,10 +14,40 @@ django-ckeditor-5==0.2.15
 django-cloudinary-storage==0.3.0
 django-js-asset==2.2.0
 djangorestframework==3.15.2
+filelock==3.17.0
+fsspec==2025.2.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.163.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.69.1
+grpcio==1.71.0rc2
+grpcio-status==1.63.0rc1
 gunicorn==21.2.0
 httplib2==0.22.0
+huggingface-hub==0.29.2
 idna==3.6
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mpmath==1.3.0
 msgpack==1.0.7
+networkx==3.4.2
+numpy==2.2.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 packaging==23.2
 pillow==10.2.0
 proto-plus==1.23.0
@@ -25,15 +56,30 @@ psycopg2-binary==2.9.9
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
+pydantic==2.10.6
+pydantic_core==2.27.2
 PyJWT==2.8.0
 pyparsing==3.1.1
 python-decouple==3.8
 pytz==2023.4
+PyYAML==6.0.2
+regex==2024.11.6
 requests==2.31.0
 rsa==4.9
+safetensors==0.5.3
+setuptools==75.8.2
 six==1.16.0
 sniffio==1.3.1
 sqlparse==0.4.4
+sympy==1.13.1
+tokenizers==0.21.0
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+tqdm==4.67.1
+transformers==4.49.0
+triton==3.2.0
+typing_extensions==4.12.2
 tzdata==2023.4
 uritemplate==4.1.1
 urllib3==2.1.0
