refactor: arrange and optimize file

--- a/.env.template
+++ b/.env.template
@@ -1,19 +1,17 @@
-ENV = """'PROD' for production or 'DEV' for development"""
+# Environment configuration: 'PROD' for production or 'DEV' for development
+ENV="DEV"
 
-SECRET_KEY = '<str>'
+# Secret key for your application
+SECRET_KEY="your_secret_key_here"
 
-CLOUDINARY_APISECRET = '<int>'
+# Cloudinary configuration
+CLOUDINARY_APISECRET="your_cloudinary_api_secret_here"
+CLOUDINARY_APIKEY="your_cloudinary_api_key_here"
+CLOUDINARY_CLOUDNAME="your_cloudinary_cloud_name_here"
 
-CLOUDINARY_APIKEY = '<int>'
-
-CLOUDINARY_CLOUDNAME = '<str>'
-
-DB_NAME = '<str>'
-
-DB_USER = '<str>'
-
-DB_PASSWORD = '<str> and <int>'
-
-DB_HOST = 'localhost'
-
-DB_PORT = '<int>'
+# Database configuration
+DB_NAME="your_database_name_here"
+DB_USER="your_database_user_here"
+DB_PASSWORD="your_database_password_here"
+DB_HOST="your_database_host_here"
+DB_PORT=5432  # Default port for PostgreSQL
