--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,49 @@
 annotated-types==0.7.0
-anyio==3.7.1
 asgiref==3.8.1
-CacheControl==0.13.1
-cachetools==5.3.2
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-cloudinary==1.38.0
-cryptography==42.0.1
-Django==4.2
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+cloudinary==1.44.0
+colorama==0.4.6
+Django==5.2.1
 django-ckeditor==6.7.2
-django-ckeditor-5==0.2.15
+django-ckeditor-5==0.2.18
 django-cloudinary-storage==0.3.0
-django-js-asset==2.2.0
-djangorestframework==3.15.2
-filelock==3.17.0
-fsspec==2025.2.0
-google-ai-generativelanguage==0.6.10
-google-api-core==2.24.0
-google-api-python-client==2.163.0
-google-auth==2.38.0
+django-cors-headers==4.7.0
+django-js-asset==3.1.2
+djangorestframework==3.16.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.169.0
+google-auth==2.40.1
 google-auth-httplib2==0.2.0
-google-generativeai==0.8.3
-googleapis-common-protos==1.69.1
-grpcio==1.71.0rc2
-grpcio-status==1.63.0rc1
-gunicorn==21.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+grpcio-status==1.71.0
+gunicorn==23.0.0
 httplib2==0.22.0
-huggingface-hub==0.29.2
-idna==3.6
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-mpmath==1.3.0
-msgpack==1.0.7
-networkx==3.4.2
-numpy==2.2.3
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-packaging==23.2
-pillow==10.2.0
-proto-plus==1.23.0
-protobuf==4.25.2
-psycopg2-binary==2.9.9
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==2.10.6
-pydantic_core==2.27.2
-PyJWT==2.8.0
-pyparsing==3.1.1
+idna==3.10
+packaging==25.0
+pillow==11.2.1
+proto-plus==1.26.1
+protobuf==5.29.4
+psycopg==3.2.9
+psycopg-binary==3.2.9
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.4
+pydantic_core==2.33.2
+pyparsing==3.2.3
 python-decouple==3.8
-pytz==2023.4
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.31.0
-rsa==4.9
-safetensors==0.5.3
-setuptools==75.8.2
-six==1.16.0
-sniffio==1.3.1
-sqlparse==0.4.4
-sympy==1.13.1
-tokenizers==0.21.0
-torch==2.6.0
-torchaudio==2.6.0
-torchvision==0.21.0
+requests==2.32.3
+rsa==4.9.1
+six==1.17.0
+sqlparse==0.5.3
 tqdm==4.67.1
-transformers==4.49.0
-triton==3.2.0
-typing_extensions==4.12.2
-tzdata==2023.4
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
 uritemplate==4.1.1
-urllib3==2.1.0
-watchdog==4.0.1
-watchgod==0.8.2
-whitenoise==6.6.0
+urllib3==2.4.0
+whitenoise==6.9.0
